[build-system]
requires = ["hatchling~=1.4", "hatch-nodejs-version", "jupyterlab~=3.4"]
build-backend = "hatchling.build"

[project]
name = "jupyros"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "ipywidgets~=7.7",
    "bqplot",
    "numpy",
    "rospkg",
    "ipycanvas"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
env = ["click", "jupyter_releaser~=0.22"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "version"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyros/labextension", "jupyros/nbextension"]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"install.json" = "share/jupyter/labextensions/jupyter-ros/install.json"
"jupyter-ros/labextension" = "share/jupyter/labextensions/@robostack/jupyros"
"jupyter-ros/nbextension" = "share/jupyter/nbextensions/@robostack/jupyros"

[tool.hatch.build.hooks.version]
path = "jupyros/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["jupyros/labextension/static/style.js", "jupyros/labextension/package.json"]
skip-if-exists = ["jupyros/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyros/labextension"

[tool.check-manifest]
ignore = ["jupyros/labextension/**", "jupyros/nbextension/**", "notebooks/**", "scripts/**", "docs/**", "js/**", ".*"]

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install jupyterlab", "cd js && jlpm clean"]
before-build-npm = ["python -m pip install jupyterlab", "cd js && jlpm clean && jlpm"]
before-build-python = ["cd js && jlpm clean"]

[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py"